recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:20: error: expected start of definition
	override def run() {
                 ^Spiral:24: error: Unmatched closing brace '}' ignored here
}
^